Update library parameters and stuff